--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 * {margin:0;padding:0;box-sizing:border-box;font-family:'Lato','Arial',sans-serif;font-size: 16px;}
 
-/* HEADINGS */
-h1, p {color:#fff;text-align:center;line-height:1.4;}
+body,nav{background: #1a2929;}
 
-h1 {font-size:2.2rem;}
+/* HEADINGS */
+h1, p, li {color:#fff;line-height:1.4;}
+
+h1 {font-size:2rem;}
 
 h2 {color:#000;font-size:1.3rem;
   text-align: center;
@@ -13,62 +15,65 @@ h2 {color:#000;font-size:1.3rem;
 }
 
 /* BASIC SETUP */
-
 .page-wrapper {
-  width: 100%;
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
 .nav-wrapper {
   width: 100%;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
-  background-color: #fff;
-}
-
-.grad-bar {
-  width: 100%;
-  height: 5px;
-  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-  background-size: 400% 400%;
-  	-webkit-animation: gradbar 15s ease infinite;
-	-moz-animation: gradbar 15s ease infinite;
-	animation: gradbar 15s ease infinite;
 }
 
 /* NAVIGATION */
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 4rem;
   overflow: hidden;
   border: 1px solid black;
+  margin: 0 1rem;
 }
 
+/* LOGO TEXT */
 .logoText{
+  display: flex;
+  align-items: center;
   width: 60px;
   height: 50px;
-  margin-left: 20px;
-  border:1px solid red;
+  /* margin-left: 20px; */
   justify-self: center;
 }
 .logoText a{text-decoration: none;}
 .logoText h1{
-  color:#000;
+  color:#b3aca7;
   margin: 0;
   font-family: "Archivo Black",sans-serif;
 }
-.logoText h1:hover{color:red;cursor: pointer;}
+.logoText h1:hover{border-bottom: 1px solid #b3aca7;}
 
-.navbar ul {
+/*NAVIGATION ITEMS*/
+
+/* .navbar ul {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(4,1fr);
   width: 400px;
   margin-right: 20px;
+} */
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border:1px solid red;
+  width: 30rem;
 }
 
 .navbar li{
@@ -76,7 +81,7 @@ h2 {color:#000;font-size:1.3rem;
 }
 
 .nav-item a {
-  color: #000;
+  color: white;
   font-size: 0.9rem;
   font-weight: 400;
   text-decoration: none;
@@ -84,22 +89,35 @@ h2 {color:#000;font-size:1.3rem;
 }
 
 .nav-item a:hover {
-  color: #3498db;
+  color: #b3aca7;
 }
 
+.diffC{color: #b3aca7;}
+
+button{
+  padding:0.5rem 0.75rem;
+  background: none;
+  color: #b3aca7;
+  border: none;
+  outline: 1px solid #b3aca7;
+  border-radius: 0.2rem;
+  transition: 0.3s;
+}
+button:hover{background-color:rgba(179,172,167,.5);}
+
 /* SECTIONS */
-.headline {
-  width: 100%;
-  height: 50vh;
-  min-height: 350px;
-  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
-  background-size: cover;
+.bigSection {
+  width: 50rem;
+  height: 42rem;/*max height of box*/
   display: flex;
   flex-direction: column;
   justify-content: center;
   border: 1px solid red;
 }
 
+
+
+/* SPECIAL SECTIONS */
 .features {
   width: 100%;
   height: auto;
@@ -126,53 +144,31 @@ h2 {color:#000;font-size:1.3rem;
   margin-bottom: 15px;
 }
 
-/* SEARCH FUNCTION */
+/*Title Section*/
+/*===============*/
+#titleSection {
+  display: flex;
+  align-items: flex-start;
+  /* justify-content: center; */
+  flex-direction: column;
+  border: 1px solid red;
 
-#search-icon {
-  font-size: 0.9rem;
-  margin-top: 3px;
-  margin-left: 15px;
-  transition: color 0.3s ease-out;
+  width: auto;
+}
+#titleSection h1,p{ text-align:left;}
+#titleOne p{color:#FFED64;}
+
+#testSection {
+  display: flex;
+  align-items: flex-start;
+  /* justify-content: center; */
+  flex-direction: column;
+  border: 1px solid red;
+  margin: 50% auto 0;
+  color: white;
 }
 
-#search-icon:hover {
-  color: #3498db;
-  cursor: pointer;
-}
 
-.search {
-  transform: translate(-35%);
-  -webkit-transform: translate(-35%);
-  transition: transform 0.7s ease-in-out;
-  color: #3498db;
-}
-
-.no-search {
-  transform: translate(0);
-  transition: transform 0.7s ease-in-out;
-}
-
-.search-input {
-  position: absolute;
-  top: -4px;
-  right: -125px;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 0.6s ease;
-}
-
-.search-active {
-  opacity: 1;
-  z-index: 0;
-}
-
-input {
-  border: 0;
-  border-left: 1px solid #ccc;
-  border-radius: 0; /* FOR SAFARI */
-  outline: 0;
-  padding: 5px;
-}
 
 /* MOBILE MENU & ANIMATION */
 
@@ -252,30 +248,20 @@ input {
 	}
 }
 
+/*================================================================*/
 /* Media Queries */
   /* Mobile Devices - Phones/Tablets */
 @media only screen and (max-width: 720px) { 
-  .features {
-    flex-direction: column;
-    padding: 50px;
-  }
-  
+  .features {flex-direction: column; padding: 50px;}
+/*==============================*/
   /* MOBILE HEADINGS */
+  h1 {font-size: 1.9rem;}
   
-  h1 {
-    font-size: 1.9rem;
-  }
+  h2 {font-size: 1rem;}
   
-  h2 {
-    font-size: 1rem;
-  }
-  
-  p {
-    font-size: 0.8rem;
-  }
-  
+  p {font-size: 0.8rem;}
+/*==============================*/
   /* MOBILE NAVIGATION */
-     
   .navbar ul {
     display: flex;
     flex-direction: column;
@@ -290,32 +276,23 @@ input {
     text-align: center;
     overflow: hidden;
   }
+
+  .navbar li {padding: 15px;}
   
-  .navbar li {
-    padding: 15px;
-  }
+  .navbar li:first-child {margin-top: 50px;}
   
-  .navbar li:first-child {
-    margin-top: 50px;
-  }
-  
-  .navbar li a {
-    font-size: 1rem;
-  }
+  .navbar li a {font-size: 1rem;}
    
-  .menu-toggle, .bar {
-    display: block;
-    cursor: pointer;
-  }
+  .menu-toggle, .bar {display: block;cursor: pointer;}
   
-  .mobile-nav {
-  transform: translate(0%)!important;
-}
-  
+  .mobile-nav {transform: translate(0%)!important;}
+
+/*==============================*/
   /* SECTIONS */
   
   .headline {
-    height: 20vh;
+    height: 95vh;/*Covers Entire Page*/
+
   }
     
   .feature-container p {
@@ -329,15 +306,5 @@ input {
   .feature-container:nth-child(2) {
     order: -1;
   }
-  
-  /* SEARCH DISABLED ON MOBILE */
-  
-  #search-icon {
-    display: none;
-  }
-  
-  .search-input {
-  display: none;
- }
   
 }
