update to mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -58,14 +58,6 @@ h2 {color:#000;font-size:1.3rem;
 
 /*NAVIGATION ITEMS*/
 
-/* .navbar ul {
-  list-style: none;
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  width: 400px;
-  margin-right: 20px;
-} */
-
 .navbar ul {
   list-style: none;
   display: flex;
@@ -107,7 +99,7 @@ button:hover{background-color:rgba(179,172,167,.5);}
 
 /* SECTIONS */
 .bigSection {
-  width: 50rem;
+  max-width: 50rem;
   height: 42rem;/*max height of box*/
   display: flex;
   flex-direction: column;
@@ -184,7 +176,7 @@ button:hover{background-color:rgba(179,172,167,.5);}
 
 .menu-toggle {
   justify-self: end;
-  margin-right: 25px;
+  margin-right: 1.5rem;
   display: none;
 }
 
@@ -210,43 +202,8 @@ button:hover{background-color:rgba(179,172,167,.5);}
   transform: translateY(-8px) rotate(-45deg);
 }
 
-/* KEYFRAME ANIMATIONS */
+/* Appear from left Animation */
 
-@-webkit-keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@-moz-keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@keyframes gradbar {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
 
 /*================================================================*/
 /* Media Queries */
@@ -266,31 +223,35 @@ button:hover{background-color:rgba(179,172,167,.5);}
     display: flex;
     flex-direction: column;
     position: fixed;
-    /* justify-content: start; */
+    justify-content: center;
     align-items: center;
-    top: 55px;
-    background-color: #fff;
-    width: 100%;
-    height: calc(100vh - 55px);
-    transform: translate(-101%);
+    top: 0px;
+    width: 75%;
+    height: calc(100vh - 40px);
+    transform: translate(-105%);
     text-align: center;
+    border-radius: 0 0 3rem 0;
     overflow: hidden;
+    background: rgb(34,73,73);
+    background: linear-gradient(90deg, rgba(34,73,73,1) 0%, rgba(26,41,41,0.9233893386456145) 100%); 
   }
 
   .navbar li {padding: 15px;}
   
   .navbar li:first-child {margin-top: 50px;}
   
-  .navbar li a {font-size: 1rem;}
+  .navbar li a {font-size: 2rem;}
+  .diffC {font-size: 2rem;}
+  button{padding:1rem 1.5rem;font-size: 1.5rem;}
    
   .menu-toggle, .bar {display: block;cursor: pointer;}
   
-  .mobile-nav {transform: translate(0%)!important;}
+  .mobile-nav {transform: translate(-6%)!important;} /* 30% works */
 
 /*==============================*/
   /* SECTIONS */
   
-  .headline {
+  .bigSection {
     height: 95vh;/*Covers Entire Page*/
 
   }
